--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li><a href="/async">Asynchronous Execution</a></li>
         <li><a href="/webApi">Web API</a></li>
         <li><a href="/notification-api">Notification API</a></li>
+        <li><a href="/interview-tricky-questions">Interview Tricky Questions</a></li>
     </ul>
 </body>
 </html>
