--- a/letVarConst/index.html
+++ b/letVarConst/index.html
@@ -6,6 +6,7 @@
     <title>Let, var and const</title>
 </head>
 <body>
+    <a href="/">Back</a>
     <h3>Difference Between let, var and const</h3>
     <p>Before the ES6 version of javascript, only the keyword var was used to declare variables. With the ES6 Version, keywords let and const were introduced to declare variables.</p>
     <table border="1" spacing="10" padding="20">
