--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <li><a href="/webApi">Web API</a></li>
         <li><a href="/notification-api">Notification API</a></li>
         <li><a href="/interview-tricky-questions">Interview Tricky Questions</a></li>
+        <li><a href="/shallow-deep-copy">Shallow and deep copy</a></li>
+        <li><a href="/debouncing">Debouncing</a></li>
     </ul>
 </body>
 </html>
